Ajustes niveles CAPC
Atención a solicitudes por correo de Claudia

--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,7 @@ TableroSLAs/db_msql.php.bak
 TableroSLAs/db_mssql.php
 TableroSLAs/db_odbc.php
 TableroSLAs/db_sqlsrv.php.bak
+TableroSLAs/cndisenio_cache.xml
+TableroSLAs/db_array.php
+TableroSLAs/db_mssql.php.bak
+TableroSLAs/diagram.ccd
