Corrección al filtor de acceso a opción de Seguimiento Operativo
Corrección al filtor de acceso a opción de Seguimiento Operativo

--- a/.gitignore
+++ b/.gitignore
@@ -9,3 +9,4 @@ TableroSLAs/cndisenio_cache.xml
 TableroSLAs/db_array.php
 TableroSLAs/db_mssql.php.bak
 TableroSLAs/diagram.ccd
+TableroSLAs/TableroSDMA4.ccs
